// tbclient.GetDislikeList.GetDislikeListResIdl
syntax = "proto3";

import "Error.proto";
import "ForumList.proto";

message GetDislikeListResIdl {
    Error error = 1;
    message DataRes {
        repeated ForumList forum_list = 1;
        int32 has_more = 2;
        int32 cur_page = 3;
    }
    DataRes data = 2;
}
